# mywidgets

./: ProbeOfConcepts.py  README.rst  basicViews.py  cbwidgetstate.py  equations.py  main.py  pyproject.toml  tokenizer.py  userinterface.py
Data/: BasicViewsShowCase.xml  WidgetParams.xml
Data/kodi/: ApplicationLayout.xml  BasicViewsShowCase.xml  InsertWidgetDialog.xml  LayoutDefault.xml  MultiCategoryExample.xml  WidgetParams.xml  browserSettings.xml  editAtribDialog.xml
Data/mixing/: mxShowcase.xml
Data/tkinter/: LayoutDefault.xml  tkGeometricManagers.xml  tkUiEditor.xml  tkVariables.xml  tkWidgetStyle.xml  tkWidgetsShowcase.xml
Tools/: CollapsingFrame.py  RegexFinder.py  SintaxEditor.py  TreeExplorer.py  WidgetsExplorer.py  uiEditor.py
Tools/uiStyle/: CustomRegEx.py  MarkupRe.py  Test_CustomRegex.py  Test_MarkupRe.py  Test_uicss.py  test.css  uiStyle.py  uicss.py
Widgets/: kodiwidgets.py
Widgets/Custom/: CollapsingFrame.py  ImageProcessor.py  SintaxEditor.py  navigationbar.py  network.py  regexframe.py  regexframe.py.bak
doc/: whatsnew.md
doc/showcase/: cssflexbox_container_properties.xml  cssflexbox_direction.xml  cssgrid_dynamic_layout.xml  cssgrid_image_galery.xml  cssgrid_patterns.xml
src/: ProbeOfConcepts.py  cbwidgetstate.py  color_constants.py  equations.py  tokenizer.py  userinterface.py
src/Tools/: ApkViewer.py  ImgProcessorExplorer.py  TTKexplorer.py  TreeExplorer.py  UIMonitor.py  UiEditor.py  uiEditor.py
tests/: ConfigDescription_test.py  Test_MarkupRe.py  Test_uicss.py  test_css.html  test_css_flexbox.py  test_css_grid.py
(+159 files in other folders)
